[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://Audio/Hit damage 1.wav" type="AudioStream" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 32 )

[node name="Player" type="Sprite"]
texture = ExtResource( 2 )
script = ExtResource( 1 )

[node name="Reload_speed" type="Timer" parent="."]
wait_time = 0.075
one_shot = true

[node name="Hitbox" type="Area2D" parent="."]

[node name="ActualHitbox" type="CollisionShape2D" parent="Hitbox"]
visible = false
shape = SubResource( 1 )

[node name="Hit" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
bus = "Effects"

[connection signal="timeout" from="Reload_speed" to="." method="_on_Reload_speed_timeout"]
[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_area_entered"]
